--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
     "jquery": "^3.6.4",
+    "swiper": "^9.0.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
